ros2_ws/log/build_2023-06-26_17-05-59/kalbot_controller/stderr.log
  File "/home/alibaba/ros2_repos/install/kalbot_controller/lib/python3.6/site-packages/kalbot_controller/kalbot_controller.py", line 23
    self.create_timer(0.2 self.communicate)
                             ^
SyntaxError: invalid syntax

